Just adding the link to the docs (no code)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
                     <span style="color:#f9f9f9;font-weight:200;">耶科的 Hangman-like Game</span>
                 </a>
             </div>
+            <nav class="collapse navbar-collapse" role="navigation">
+	        <ul class="nav navbar-nav">
+	            <li>
+		        <a href="/out">Check the docs</a>
+	            </li>
+	        </ul>
+            </nav>
         </div>
     </header>
 
